src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Credentials__c</fullName>
        <label>Credentials</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formatted_Name__c</fullName>
        <label>Formatted Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Graduation_Year__c</fullName>
        <label>Graduation Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HeadLine__c</fullName>
        <label>HeadLine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hospitals__c</fullName>
        <label>Hospitals</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITG_Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITG_Region__c</fullName>
        <label>Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interests__c</fullName>
        <label>Interests</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_User__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id &amp; &quot;?noredirect=1&quot;,  FirstName &amp; &quot; &quot; &amp; LastName, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link to User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LinkedInSpecialties__c</fullName>
        <label>LinkedInSpecialties</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maiden_Name__c</fullName>
        <label>Maiden Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedicalSchool__c</fullName>
        <label>MedicalSchool</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Newsletter_Flag__c</fullName>
        <label>Newsletter Flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification_Email__c</fullName>
        <label>Notification Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Npi__c</fullName>
        <label>Npi</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginalPictureUrl__c</fullName>
        <label>OriginalPictureUrl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phonetic_First_Name__c</fullName>
        <label>Phonetic First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phonetic_Last_Name__c</fullName>
        <label>Phonetic Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PictureUrl__c</fullName>
        <label>PictureUrl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Practice_Type__c</fullName>
        <label>Practice Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Language__c</fullName>
        <label>Primary Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfessionalId__c</fullName>
        <label>ProfessionalId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Completeness__c</fullName>
        <label>Profile Completeness</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Provider__c</fullName>
        <label>Service Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Social_Id__c</fullName>
        <label>Social Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpecialityDetails__c</fullName>
        <label>SpecialityDetails</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speciality__c</fullName>
        <label>Speciality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Registered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User Registered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ValueAmount__c</fullName>
        <label>ValueAmount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verified__c</fullName>
        <label>Verified</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>